<resources>
    <string name="app_name">Are We There Yet maidlowc</string>
    <string name="provider">Provider: </string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="dummy">dummy</string>
    <string name="button_text">New</string>
    <string name="new_location">New Location</string>
    <string name="exception">Failed to communicate with geolocation services</string>
    <string name="couldnotfind">Unable to locate address</string>
    <string name="eb2250">Engineering Building 2250</string>
    <string name="sparty">Sparty Statue</string>
    <string name="home">Home</string>
</resources>
