<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:layout_centerVertical="true"
    android:gravity="clip_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/textlabelProvider"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/textlabelProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"


        android:text="@string/provider" />

    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textlabelProvider"
        android:layout_toRightOf="@id/textlabelLatitude"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/textlabelLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textlabelProvider"
        android:layout_marginLeft="25dp"
        android:text="@string/latitude" />


    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textlabelLatitude"
        android:layout_toRightOf="@id/textlabelLongitude"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/textlabelLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textlabelLatitude"
        android:layout_marginLeft="25dp"
        android:text="@string/longitude" />

    <TextView
        android:id="@+id/textTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textlabelLongitude"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/dummy"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/textDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTo"
        android:layout_alignParentRight="false"
        android:layout_centerInParent="true"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/textNewLocLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textDistance"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/new_location"
        android:textSize="15sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textNewLocLabel"
        android:layout_centerInParent="true"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/buttonNewLoc"
        android:onClick="onNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editLocation"
        android:layout_centerInParent="true"
        android:text="@string/button_text" />

</RelativeLayout>